2010-03-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* input.cpp: Implement MoveMouseDirect.

2010-03-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* input.cpp|h:
	* shocker.cpp|h:
	* shutdown-manager.cpp: Make InputProvider a singleton class, and implement a
	few more 3.0/4.0 methods the SL tests require.

2010-03-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* logging.cpp: Fix local/instance variable write.

2010-03-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* logging.cpp: Try to get the test definition again if the entire buffer was
	filled.

2010-03-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* shocker.cpp: Stubbed out new test plugin methods and implemented
	GetPlatformName.

	* logging.cpp|h: Added Start|EndLog methods.

2010-03-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* image-capture.cpp|h: Add a CompareImages method with the signature the
	drt test framework is p/invoking.

	* shocker.cpp: Use the CompareImages in image-capture, and rename the methods
	in here with the same name to avoid name clashes.

2010-03-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* shocker.cpp:
	* logging.cpp|h: Make the log provider live as long as the process lives and
	create it automatically when needed.

2010-03-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* shocker.cpp:
	* logging.cpp|h: Added new p/invokable c methods and a few new methods too.

	* image-capture.cpp|h: Make Capture[Single|Multiple]Image[s] static, no need
	to be instance methods. Add new p/invokable c method.

	* harness.cpp|h: send_harness_message: add support for receiving more than 1
	byte back.

2010-03-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* shocker.cpp: Fix capitalization.

2010-03-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* shocker.cpp: Make NPN_strdup static so that it doesn't clash with
	libmoonplugin's version of it. Also don't call MOON_NPN_MemAlloc, but call our
	browser class' MemAlloc.

	* browser.cpp|h: Implement browser MemAlloc.
